--- a/testes/package.json
+++ b/testes/package.json
@@ -1,5 +1,5 @@
 {
-  "name":"cypres-automacao",
+  "name": "cypres-automacao",
   "version": "1.0.0",
   "main": "index.js",
   "author": "Maycon Porto",
@@ -9,7 +9,8 @@
   },
   "devDependencies": {
     "@faker-js/faker": "^7.1.0",
-    "faker": "^5.5.3",
-    "cypress": "^9.7.0"
+    "@types/faker": "^6.6.9",
+    "cypress": "^9.7.0",
+    "faker": "^5.5.3"
   }
 }
